[workspace]
members = [
  "h2s2",
]
resolver = "2"

[workspace.dependencies]
ark-std = {version ="0.5.0", features = ["parallel"]}
ark-ec = {version = "0.5.0", features = ["parallel"]}
ark-ff = { version = "0.5", features = [ "parallel" ] }
blake2 = "0.10.6"
digest = "0.10.7"
rayon = "1.1"
ark-bn254 = "0.5.0"
