[package]
name = "h2s2"
version = "0.1.0"
authors = [
  "Bryan Cole <bryan.cole@semiotic.ai>",
  "Severiano Sisneros <severiano@semiotic.ai>",
  "Alexis Asseman <alexis@semiotic.ai>",
  "Tomasz Kornuta <tomasz@semiotic.ai>",
]
license = "Apache-2.0"
description = ""
edition = "2021"
keywords = ["holographic", "homomorphic", "signature-scheme"]
catagories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
ark-ec = {workspace = true}
ark-std = { workspace = true}
ark-ff = { workspace = true}
ark-bn254 = { workspace = true}
blake2 = {workspace = true}
rayon = { workspace = true}
digest = { workspace = true}
once_cell = "1.20.2"
